# qmlFluentui

./: .gitignore  CMakeLists.txt  Main.qml  README.md  biisglobalenums.cpp  biisglobalenums.h  main.cpp
example/: example_en_US.qm  example_zh_CN.qm
qml/BaseComponent/: BizBaseComponent.qml  BizDocNumComponent.qml  DataBaseItem.qml  ShadowBox.qml
qml/BizBaseComponent/: BizBaseData.qml  BizBaseLabeledInput.qml  ReadBizBaseComponent.md
qml/BizBaseComponent/BaseComp/: BizBaseDialogItem.qml  BizBaseLabeledInput.qml  BizBaseTabItem.qml  BizBaseViewItem.qml
qml/BizBaseComponent/DataManager/: BaseData.qml  BizBaseCompDataManager.qml  BizBaseFormDataManager.qml
qml/BizComponent/: BizCheckBox.qml  BizFlagCombox.qml  BizMultiComboBox.qml  BizRadioGroup.qml  BizSearchableCombox.qml  BizSlider.qml  BizSpinBox.qml  BizTextInput.qml  BizToggleSwitch.qml  BizUserComboBox.qml  ReadBizComponent.md
qml/FluComponent/: FluFlagCombox.qml  FluFlagRadioGroup.qml  FluSearchableCombox.qml  FluShadowGroupBox.qml  FluUserComboBox.qml  JsonListModel.qml  ReadFluComponent.md
qml/Layout/SearchLayoutTemplate/: DefaultLayoutHeader.qml  SearchLayoutTemplate.qml
qml/LayoutTemplate/: LayoutHeaderBodyFooterTemp.qml  LayoutHeaderBodyFooterTempDraggable.qml  ReadLayoutTemplate.md
qml/LayoutTemplate/HeaderBodyFooter/: BaseHeaderBodyFooterDialog.qml  BaseHeaderBodyFooterItem.qml  LayoutHeaderBodyFooterDraTabTempl.qml  LayoutHeaderBodyFooterDraTempl.qml  LayoutHeaderBodyFooterTemp.qml  LayoutHeaderBodyFooterTempDraggable.qml  LayoutHeaderBodyFooterTempl.qml
qml/LayoutTemplate/TopBottom/: LayoutTopBottomDraTabTempl.qml
qml/LayoutTemplate/TopBottomSplit/: BaseTopBottomSplitDialog.qml  BaseTopBottomSplitItem.qml  LayoutTopBottomLeftSplitDraTempl.qml  LayoutTopBottomSplitDraSimpleTempl.qml  LayoutTopBottomSplitDraTabFluPivotTempl.qml  LayoutTopBottomSplitDraTabSimpleTempl.qml  LayoutTopBottomSplitDraTabTempl.qml  LayoutTopBottomSplitDraTempl.qml  LayoutTopBottomSplitTempDraggable.qml  LayoutTopBottomSplitTempl.qml  LayoutTopBottomStatusBarTabFluPivotTempl.qml
qml/View/: ReadView.md
qml/View/TopBottomSplitViewUserInfo/: RegionBTBSDeptManagerTab.qml  RegionBTBSUserBindRoleDialog.qml  RegionBTBSUserInfoBioDialog.qml  RegionBTBSUserInfoBottomLeft.qml  RegionBTBSUserInfoBottomRightBottom.qml  RegionBTBSUserInfoBottomRightTop.qml  RegionBTBSUserInfoSearchDialog.qml  RegionBTBSUserInfoTab.qml  RegionBTBSUserInfoTop.qml  ViewBTBSUserInfo.qml
qml/View/ViewUserInfo/: RegionUserInfoBody.qml  RegionUserInfoEditDialog.qml  RegionUserInfoFooter.qml  RegionUserInfoHeader.qml  RegionUserInfoSearchDialog.qml  ViewThemeColorsTest.qml  ViewUserInfo.qml
